[package]
name = "cw-migratable-contract-std"
version = "7.0.0"
authors = ["Luca Spinazzola"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/eqoty-labs/cw-migratable-contract-std"
readme = "Readme.md"
description = "A collection of standardized messages, state structs, and helper functions a contract can use to implement contract migration."
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["secret-contracts", ]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_repr = "0.1.12"
schemars = "0.8.12"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.10", default-features = false }
secret-toolkit = { version = "0.9.0", default-features = false, features = ["storage", "permit", "serialization"] }
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
fadroma = { version = "0.8.7", features = ["ensemble", "scrt"] }

# Iterator fix for fadroma
# Enable iterator for testing (not supported in production)
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10", default-features = false, features = ["iterator"] }