[package]
name = "cw-migratable-contract-std"
version = "11.0.0"
authors = ["Luca Spinazzola"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/eqoty-labs/cw-migratable-contract-std"
readme = "Readme.md"
description = "A collection of standardized messages, state structs, and helper functions a contract can use to implement contract migration."
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["secret-contracts", ]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde_repr = "0.1.16"
schemars = "0.8.15"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["storage", "serialization"] }
strum = { version = "0.25.0", features = ["derive"] }